[metadata]
name = nectarallocationclient
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
license = Apache-2.0
summary = Client for the Nectar Allocation system
description_file =
    README.md
keywords = nectarallocation
home_page = https://github.com/NeCTAR-RC/python-nectarallocationclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12

[files]
packages = nectarallocationclient
include_package_data = True

[pbr]
skip_changelog=true
skip_authors=true

[entry_points]
openstack.cli.extension =
    allocation = nectarallocationclient.osc.plugin

openstack.allocation.v1 =
    allocation list = nectarallocationclient.osc.v1.allocations:ListAllocations
    allocation show = nectarallocationclient.osc.v1.allocations:ShowAllocation
    allocation amend = nectarallocationclient.osc.v1.allocations:AmendAllocation
    allocation approve = nectarallocationclient.osc.v1.allocations:ApproveAllocation
    allocation delete = nectarallocationclient.osc.v1.allocations:DeleteAllocation
    allocation history = nectarallocationclient.osc.v1.allocations:AllocationHistory
    allocation create = nectarallocationclient.osc.v1.allocations:CreateAllocation
    allocation set = nectarallocationclient.osc.v1.allocations:UpdateAllocation
    allocation zone list = nectarallocationclient.osc.v1.zones:ListZones
    allocation zone show = nectarallocationclient.osc.v1.zones:ShowZone
    allocation zone compute-homes = nectarallocationclient.osc.v1.zones:ListComputeHomes
    allocation service-type list = nectarallocationclient.osc.v1.service_types:ListServiceTypes
    allocation service-type show = nectarallocationclient.osc.v1.service_types:ShowServiceType
    allocation quota list = nectarallocationclient.osc.v1.quotas:ListQuotas
    allocation quota history = nectarallocationclient.osc.v1.quotas:QuotaHistory
    allocation resource list = nectarallocationclient.osc.v1.resources:ListResources
    allocation resource show = nectarallocationclient.osc.v1.resources:ShowResource
    allocation grant list = nectarallocationclient.osc.v1.grants:ListGrants
    allocation grant show = nectarallocationclient.osc.v1.grants:ShowGrant
    allocation site list = nectarallocationclient.osc.v1.sites:ListSites
    allocation site show = nectarallocationclient.osc.v1.sites:ShowSite
    allocation facility list = nectarallocationclient.osc.v1.facilities:ListFacilities
    allocation facility show = nectarallocationclient.osc.v1.facilities:ShowFacility
    allocation organisation list = nectarallocationclient.osc.v1.organisations:ListOrganisations
    allocation organisation show = nectarallocationclient.osc.v1.organisations:ShowOrganisation
    allocation organisation create = nectarallocationclient.osc.v1.organisations:CreateOrganisation
    allocation organisation approve = nectarallocationclient.osc.v1.organisations:ApproveOrganisation
    allocation organisation decline = nectarallocationclient.osc.v1.organisations:DeclineOrganisation
    allocation bundle list = nectarallocationclient.osc.v1.bundles:ListBundles
    allocation bundle show = nectarallocationclient.osc.v1.bundles:ShowBundle
    allocation bundle quotas = nectarallocationclient.osc.v1.bundles:ShowBundleQuotas
