[metadata]
name = nectarallocationclient
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
license = Apache-2.0
summary = Client for the Nectar Allocation system
description_file =
    README.rst
keywords = nectarallocation
home_page = https://github.com/NeCTAR-RC/python-nectarallocationclient
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12

[files]
packages = nectarallocationclient
include_package_data = True

[pbr]
skip_changelog=true
skip_authors=true

[entry_points]
openstack.cli.extension =
    allocation = nectarallocationclient.osc.plugin

openstack.allocation.v1 =
    allocation list = nectarallocationclient.osc.v1.allocations:ListAllocations
    allocation show = nectarallocationclient.osc.v1.allocations:ShowAllocation
    allocation amend = nectarallocationclient.osc.v1.allocations:AmendAllocation
    allocation approve = nectarallocationclient.osc.v1.allocations:ApproveAllocation
    allocation delete = nectarallocationclient.osc.v1.allocations:DeleteAllocation
    allocation history = nectarallocationclient.osc.v1.allocations:AllocationHistory
    allocation create = nectarallocationclient.osc.v1.allocations:CreateAllocation
    allocation set = nectarallocationclient.osc.v1.allocations:UpdateAllocation
    allocation zone list = nectarallocationclient.osc.v1.zones:ListZones
    allocation zone show = nectarallocationclient.osc.v1.zones:ShowZone
    allocation zone create = nectarallocationclient.osc.v1.zones:CreateZone
    allocation zone set = nectarallocationclient.osc.v1.zones:SetZone
    allocation zone compute-homes = nectarallocationclient.osc.v1.zones:ListComputeHomes
    allocation service-type list = nectarallocationclient.osc.v1.service_types:ListServiceTypes
    allocation service-type show = nectarallocationclient.osc.v1.service_types:ShowServiceType
    allocation service-type create = nectarallocationclient.osc.v1.service_types:CreateServiceType
    allocation service-type set = nectarallocationclient.osc.v1.service_types:SetServiceType
    allocation quota list = nectarallocationclient.osc.v1.quotas:ListQuotas
    allocation quota history = nectarallocationclient.osc.v1.quotas:QuotaHistory
    allocation quota create = nectarallocationclient.osc.v1.quotas:CreateQuota
    allocation quota delete = nectarallocationclient.osc.v1.quotas:DeleteQuota
    allocation resource list = nectarallocationclient.osc.v1.resources:ListResources
    allocation resource show = nectarallocationclient.osc.v1.resources:ShowResource
    allocation resource create = nectarallocationclient.osc.v1.resources:CreateResource
    allocation resource set = nectarallocationclient.osc.v1.resources:SetResource
    allocation grant list = nectarallocationclient.osc.v1.grants:ListGrants
    allocation grant show = nectarallocationclient.osc.v1.grants:ShowGrant
    allocation grant create = nectarallocationclient.osc.v1.grants:CreateGrant
    allocation grant delete = nectarallocationclient.osc.v1.grants:DeleteGrant
    allocation site list = nectarallocationclient.osc.v1.sites:ListSites
    allocation site show = nectarallocationclient.osc.v1.sites:ShowSite
    allocation site create = nectarallocationclient.osc.v1.sites:CreateSite
    allocation site set = nectarallocationclient.osc.v1.sites:SetSite
    allocation facility list = nectarallocationclient.osc.v1.facilities:ListFacilities
    allocation facility show = nectarallocationclient.osc.v1.facilities:ShowFacility
    allocation facility create = nectarallocationclient.osc.v1.facilities:CreateFacility
    allocation facility set = nectarallocationclient.osc.v1.facilities:SetFacility
    allocation organisation list = nectarallocationclient.osc.v1.organisations:ListOrganisations
    allocation organisation show = nectarallocationclient.osc.v1.organisations:ShowOrganisation
    allocation organisation create = nectarallocationclient.osc.v1.organisations:CreateOrganisation
    allocation organisation set = nectarallocationclient.osc.v1.organisations:SetOrganisation
    allocation organisation approve = nectarallocationclient.osc.v1.organisations:ApproveOrganisation
    allocation organisation decline = nectarallocationclient.osc.v1.organisations:DeclineOrganisation
    allocation bundle list = nectarallocationclient.osc.v1.bundles:ListBundles
    allocation bundle show = nectarallocationclient.osc.v1.bundles:ShowBundle
    allocation bundle quotas = nectarallocationclient.osc.v1.bundles:ShowBundleQuotas
    allocation bundle create = nectarallocationclient.osc.v1.bundles:CreateBundle
    allocation bundle set = nectarallocationclient.osc.v1.bundles:SetBundle
    allocation chiefinvestigator list = nectarallocationclient.osc.v1.chiefinvestigators:ListChiefInvestigators
    allocation chiefinvestigator show = nectarallocationclient.osc.v1.chiefinvestigators:ShowChiefInvestigator
    allocation chiefinvestigator create = nectarallocationclient.osc.v1.chiefinvestigators:CreateChiefInvestigator
    allocation chiefinvestigator set = nectarallocationclient.osc.v1.chiefinvestigators:SetChiefInvestigator
    allocation chiefinvestigator delete = nectarallocationclient.osc.v1.chiefinvestigators:DeleteChiefInvestigator
    allocation publication list = nectarallocationclient.osc.v1.publications:ListPublications
    allocation publication show = nectarallocationclient.osc.v1.publications:ShowPublication
    allocation publication create = nectarallocationclient.osc.v1.publications:CreatePublication
    allocation publication delete = nectarallocationclient.osc.v1.publications:DeletePublication
    allocation approver list = nectarallocationclient.osc.v1.approvers:ListApprovers
    allocation approver show = nectarallocationclient.osc.v1.approvers:ShowApprover
    allocation approver create = nectarallocationclient.osc.v1.approvers:CreateApprover
    allocation approver set = nectarallocationclient.osc.v1.approvers:SetApprover
    allocation ardc-project list = nectarallocationclient.osc.v1.ardc_projects:ListARDCProjects
    allocation ardc-project show = nectarallocationclient.osc.v1.ardc_projects:ShowARDCProject
    allocation ardc-project create = nectarallocationclient.osc.v1.ardc_projects:CreateARDCProject
    allocation ardc-project set = nectarallocationclient.osc.v1.ardc_projects:SetARDCProject
